2010-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.39 released.

        * Fixed some deprecated defined(%hash) statements


2010-08-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.36 released.

        * Changed Terminal size testing code in order to not break
          CPAN testing.


2010-08-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.35 released.

        * Added code to implement 'tosspass' condition for Net::FullAuto


2010-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.34 released.

        * Added test for Term::ReadKey and if found use termheight
          to define whitespace header for screens

        * Fixed bug https://rt.cpan.org/Ticket/Display.html?id=18382
          where the screen was not properly clearign for Windows

        $ Fixed bug with "Default" setting

        * Changes to repair interactions with FullAuto architecture


2010-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.33 released.

        * Changes to repair interactions with FullAuto architecture


2008-02-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.32 released.

        * Added Macro enhancement ]Previous[{Menu_Label} to POD
          documentation.

        * Repaired and updated code so that Macros work as advertised

        * Repaired subroutine use with Convey => '&sub()', and
          Result => '&sub()', elements in Item_<#> hashes in the Menu
          configuration hash.

        * Repaired full Macro use in Banners

        * Repaired a number of navigation bugs

2008-01-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.31 released.

        * Repair Distribution (bad META.yml).

2008-01-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.30 released.

        * Repaired bugs impairing the use of subroutines with